@@ -20,8 +20,8 @@
 
     function reset()
     {
-        window.moveTo(0,0);
-        window.resizeTo(800,600);
+        window.moveTo(0, 0);
+        window.resizeTo(300, 200);
         resetWidth = window.outerWidth;
         resetHeight = window.outerHeight;
         resetX = window.screenX;
@@ -129,9 +129,7 @@
     window.moveBy(x, y, 200, "text");
     shouldBe('window.screenX', 'resetX + x');
     shouldBe('window.screenY', 'resetY + y');
-
-    reset();
-
+ 
     var successfullyParsed = true;
 </script>
 <script src="../../js/resources/js-test-post.js"></script>
